--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
         <div class="box" data-aos="fade-up">
             <h3>Follow us</h3>
             <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
-            <a href="https://twitter.com/_citiflo?t=1SRGw4peiZw-KblwLv7XGg&s=09"> <i class="fab fa-twitter"></i> twitter </a>
-            <a href="https://www.instagram.com/Citiflo_official/"> <i class="fab fa-instagram"></i> instagram </a>
-            <a href="https://www.linkedin.com/in/citiflo-930235264"> <i class="fab fa-linkedin"></i> linkedin </a>
+            <a href="https://twitter.com/_citiflo?t=1SRGw4peiZw-KblwLv7XGg&s=09" target="_blank"> <i class="fab fa-twitter"></i> twitter </a>
+            <a href="https://www.instagram.com/Citiflo_official/"> <i class="fab fa-instagram" target="_blank"></i> instagram </a>
+            <a href="https://www.linkedin.com/in/citiflo-930235264"> <i class="fab fa-linkedin" target="_blank"></i> linkedin </a>
 <!--             <a href="#"> <i class="fab fa-pinterest"></i> pinterest </a> -->
             
         <a href="#downloadapp"><input type="submit" value="download" class="btn"></a>
