--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             <h3>Follow us</h3>
             <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
             <a href="https://twitter.com/_citiflo?t=1SRGw4peiZw-KblwLv7XGg&s=09" target="_blank"> <i class="fab fa-twitter"></i> twitter </a>
-            <a href="https://www.instagram.com/Citiflo_official/" target="_blank"> <i class="fab fa-instagram"></i> instagram </a>
+            <a href="https://instagram.com/citiflo_solutions?igshid=NTc4MTIwNjQ2YQ==" target="_blank"> <i class="fab fa-instagram"></i> instagram </a>
             <a href="https://www.linkedin.com/in/citiflo-930235264" target="_blank"> <i class="fab fa-linkedin"></i> linkedin </a>
 <!--             <a href="#"> <i class="fab fa-pinterest"></i> pinterest </a> -->
             
