--- a/index.html
+++ b/index.html
@@ -348,18 +348,17 @@
 
         <div class="box" data-aos="fade-up">
             <h3>Quick links</h3>
-            <a href="#"> <i class="fas fa-chevron-right"></i> home </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> services </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> review </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> contact </a>
+            <a href="#home"> <i class="fas fa-chevron-right"></i> home </a>
+            <a href="#services"> <i class="fas fa-chevron-right"></i> services </a>
+            <a href="#review"> <i class="fas fa-chevron-right"></i> review </a>
+            <a href="#contact"> <i class="fas fa-chevron-right"></i> contact </a>
         
         </div>
 
         <div class="box" data-aos="fade-up">
             <h3>Contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +234 816 626 8045 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +234 818 157 5481 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> danielokpata@yahoo.com </a>
+            <a href="https://wa.link/xy06v8"> <i class="fas fa-phone"></i> +234 816 626 8045 </a>
+            <a href="mailto:danielokpata@yahoo.com "> <i class="fas fa-envelope"></i> danielokpata@yahoo.com </a>
             <a href="#"> <i class="fas fa-map-marker-alt"></i> Musterpoint, No 1,Adekunle Owobiyi, Ogba Ikeja,Lagos,Nigeria.</a>
         </div>
 
@@ -376,7 +375,7 @@
 
     </div>
 
-    <div class="credit"> created by <span>Tencity software services</span> | all rights reserved </div>
+    <div class="credit"> created by <span>Citiflo Solution</span> | all rights reserved </div>
 
 </section>
 
