--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@
 
         <div class="box" data-aos="fade-up">
             <h3>Contact info</h3>
-            <a href="https://wa.link/xy06v8"> <i class="fas fa-phone"></i> +234 816 626 8045 </a>
+            <a href="https://wa.link/xy06v8"> <i class="fas fa-phone"></i> zhatsapp </a>
             <a href="mailto:danielokpata@yahoo.com "> <i class="fas fa-envelope"></i> danielokpata@yahoo.com </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> Musterpoint, No 1,Adekunle Owobiyi, Ogba Ikeja,Lagos,Nigeria.</a>
+            <i class="fas fa-map-marker-alt"></i> Musterpoint, No 1,Adekunle Owobiyi, Ogba Ikeja,Lagos,Nigeria.
         </div>
 
         <div class="box" data-aos="fade-up">
