--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
         <div class="box" data-aos="fade-up">
             <h3>Contact info</h3>
-            <a href="https://wa.link/xy06v8"> <i class="fas fa-phone"></i> whatsapp </a>
+            <a href="https://wa.link/xy06v8"> <i class="fa fa-phone"></i> whatsapp </a>
             <a href="mailto:danielokpata@yahoo.com "> <i class="fa fa-whatsapp"></i> danielokpata@yahoo.com </a>
             <a><i class="fas fa-map-marker-alt"></i> Musterpoint, No 1,Adekunle Owobiyi, Ogba Ikeja,Lagos,Nigeria.</a>
         </div>
