--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <span>01</span>
             <i class="fas fa-piggy-bank"></i>
             <h3>Affordable</h3>
-            <p>Get the best service at the lowest rate</p>
+            <p>Get the best logistics services at affordable rate</p>
         </div>
 
         <div class="box" data-aos="zoom-in">
@@ -357,7 +357,7 @@
 
         <div class="box" data-aos="fade-up">
             <h3>Contact info</h3>
-            <a href="https://wa.link/xy06v8"> <i class="fa fa-phone"></i> whatsapp </a>
+            <a href="https://wa.link/xy06v8"> <i class="fa fa-whatsapp"></i> +234 8166 268 045 </a>
             <a href="mailto:danielokpata@yahoo.com "> <i class="fa fa-whatsapp"></i> danielokpata@yahoo.com </a>
             <a><i class="fas fa-map-marker-alt"></i> Musterpoint, No 1,Adekunle Owobiyi, Ogba Ikeja,Lagos,Nigeria.</a>
         </div>
