--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <div class="box" data-aos="fade-up">
             <h3>Contact info</h3>
             <a href="https://wa.link/xy06v8"> <i class="fab fa-whatsapp"></i> +234 8166 268 045 </a>
-            <a href="mailto:danielokpata@yahoo.com "> <i class="fa fa-whatsapp"></i> danielokpata@yahoo.com </a>
+            <a href="mailto:danielokpata@yahoo.com "> <i class="fas fa-envelope"></i> danielokpata@yahoo.com </a>
             <a><i class="fas fa-map-marker-alt"></i> Musterpoint, No 1,Adekunle Owobiyi, Ogba Ikeja,Lagos,Nigeria.</a>
         </div>
 
@@ -375,7 +375,7 @@
 
     </div>
 
-    <div class="credit"> created by <span>Citiflo Solution</span> | all rights reserved </div>
+    <div class="credit"> created by <span>Citiflo Solutions</span> | all rights reserved </div>
 
 </section>
 
