--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 <section class="home" id="home">
 
     <div class="image" data-aos="fade-down">
-        <img src="images/d3.jpg" alt="" height="820" width="100" style="border-top-right-radius: 130px; border-bottom-left-radius: 200px; box-shadow: 0px 2px 3px grey;">
+        <img src="images/citiflo2.jpg" alt="" height="820" width="100" style="border-top-right-radius: 130px; border-bottom-left-radius: 200px; box-shadow: 0px 2px 3px grey;">
     </div>
 
     <div class="content" data-aos="fade-up">
-        <h3>Send. Deliver. Earn.</h3>
-        <p><big>CITIFLO</big> connects individuals seeking to send goods with verified and authorized representatives in real-time, while also providing a profit-sharing opportunity for the representatives.</p>
+        <h3 style="text-align: center;">Your logistics, Your way.</h3>
+        <p>At <big style="color: #588524;">CITIFLO</big> we know that every business has its own journey. That's why our logistics solution is designed to be as unique as you are. From specialized handling to tailored delivery options, we make sure your logistics experience reflects your brand's essence.</p>
         <a href="#" class="btn">explore now</a>
     </div>
 
@@ -91,9 +91,9 @@
 
 <section class="packages" id="packages">
 
-    <h1 class="heading"> How it <span>works</span> </h1>
+    <h1 class="heading"> About<span> us</span> </h1>
 
-    <div class="box-container">
+    <!-- <div class="box-container">
 
         <div class="box" data-aos="fade-up">
             <div class="image">
@@ -130,8 +130,9 @@
                     Delivery can be made efficiently, easily, privately and at best cost than logistic services offer.Start sending!Start earning.</p>
                 <a href="#" class="btn"> Download</a>
             </div>
-        </div>
+        </div> -->
 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ex inventore necessitatibus quasi unde, quas, ratione sapiente nihil deleniti magni, iure natus perspiciatis. Eius officia libero suscipit, error sapiente vitae quas. Dolores cumque consequatur nostrum facere deserunt perspiciatis, fugiat tempore ut tempora. Architecto beatae consequatur eius minus illo, rerum quae quasi dicta repellat alias sit rem nesciunt. Veritatis, rem. Eveniet, praesentium cumque. Delectus, iste! Corporis totam quisquam modi tempore error, tenetur molestias voluptatibus. Quos natus praesentium ea ut rerum. Maxime at debitis pariatur impedit fugiat temporibus, culpa ipsa repudiandae non deleniti iste maiores. Explicabo magni enim, expedita consequatur quos suscipit.
 
     </div>
 
@@ -149,16 +150,16 @@
 
         <div class="box" data-aos="zoom-in">
             <span>01</span>
-            <i class="fas fa-piggy-bank"></i>
-            <h3>Affordable</h3>
-            <p>Get the best logistics services at affordable rate</p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 15 15"><path fill="green" d="M1.5 0a1.5 1.5 0 1 0 1.415 2H4.5A2.5 2.5 0 0 1 7 4.5v6a3.5 3.5 0 0 0 3.5 3.5h1.585a1.5 1.5 0 1 0 0-1H10.5A2.5 2.5 0 0 1 8 10.5v-6A3.5 3.5 0 0 0 4.5 1H2.915A1.5 1.5 0 0 0 1.5 0Z"/></svg>
+            <h3>Connect</h3>
+            <p>connect with certified logistics partners at affordable rate</p>
         </div>
 
         <div class="box" data-aos="zoom-in">
             <span>02</span>
-            <i class="fas fa-clock"></i>
-            <h3>24/7 Customer support</h3>
-            <p>Talk to a personnel at any time</p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="green" d="M2 21v-6h7v2h6v-2h7v6H2Zm9-6v-2h2v2h-2Zm-9-2V6h6V2h8v4h6v7h-7v-2H9v2H2Zm8-7h4V4h-4v2Z"/></svg>
+            <h3>Business solution</h3>
+            <p>No matter the size or nature of your business our logistic partners offer customized solutions from warehousing to last-mile delivery, we've got you back.</p>
         </div>
 
         <!-- <div class="box" data-aos="zoom-in">
@@ -184,9 +185,9 @@
 
         <div class="box" data-aos="zoom-in">
             <span>01</span>
-            <i class="fas fa-bullhorn"></i>
-            <h3>Safety guide</h3>
-            <p>Optimal protection of packages</p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 512 512"><path fill="green" d="M256 16c-48 0-80 32-80 64c0 48 16 80 32 96v16h96v-16c16-16 32-48 32-96c0-32-32-64-80-64zm-63.6 65.33L256 102.5l63.6-21.17l-39.2 97.97l-16.8-6.6l24.8-62l-32.4 10.8l-32.4-10.8l24.8 62l-16.8 6.6l-39.2-97.97zm-83.3 79.07c-23.4 3-44.6 30.5-44.6 65.9c0 19.6 6.8 36.9 16.7 48.9l11.9 14.2l-18.3 3.4c-12.9 2.5-22.3 9.3-30.4 20.4c-8.1 11.1-14.3 26.5-18.6 44.4C18 389.8 16.2 429.2 16 464h42.8l2.24 30H169.6l2-30h40.8c0-35.2-.4-75.1-7.5-107.7c-4-17.9-9.9-33.3-18.1-44.3c-8.2-11-18.1-17.8-32.6-20l-18.5-2.9l11.7-14.7c9.5-11.9 15.9-29 15.9-48.1c0-37.8-23.6-65.8-49.4-65.8l-4.8-.1zm283.6 0c-23.4 3-44.6 30.5-44.6 65.9c0 19.6 6.8 36.9 16.7 48.9l11.9 14.2l-18.3 3.4c-12.9 2.5-22.3 9.3-30.4 20.4c-8.1 11.1-14.3 26.5-18.6 44.4c-7.8 32.2-9.6 71.6-9.8 106.4h42.8l2.2 30h108.6l2-30H496c0-35.2-.4-75.1-7.5-107.7c-4-17.9-9.9-33.3-18.1-44.3c-8.2-11-18.1-17.8-32.6-20l-18.5-2.9l11.7-14.7c9.5-11.9 15.9-29 15.9-48.1c0-37.8-23.6-65.8-49.4-65.8l-4.8-.1zM208 209v18h96v-18h-96zm16 34v18h64v-18h-64z"/></svg>
+            <h3>Seemless B2B and B2C</h3>
+            <p>Our platform brings business to business and business to customers together. Manage orders,track shipments and analyse data effortlessly.</p>
         </div>
 
     </div>
