--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <section class="home" id="home">
 
     <div class="image" data-aos="fade-down">
-        <img src="images/citiflo2.jpg" alt="" height="820" width="100" style="border-top-right-radius: 130px; border-bottom-left-radius: 200px; box-shadow: 0px 2px 3px grey;">
+        <img src="images/citiflo2.jpg" alt="" height="820" width="100" style="border-top-right-radius: 130px; border-bottom-left-radius: 200px; box-shadow:  0px 4px 3px 2px rgba(134, 131, 131, 0.699);">
     </div>
 
     <div class="content" data-aos="fade-up">
