--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <section class="home" id="home">
 
     <div class="image" data-aos="fade-down">
-        <img src="images/citiflo2.jpg" alt="" height="820" width="100" style="border-top-right-radius: 130px; border-bottom-left-radius: 200px; box-shadow:  0px 4px 3px 2px rgba(134, 131, 131, 0.699);">
+        <img src="images/d1.jpg" alt="" height="820" width="100" style=" box-shadow:  0px 2px 3px rgba(134, 131, 131, 0.699);">
     </div>
 
     <div class="content" data-aos="fade-up">
@@ -89,9 +89,9 @@
 
 <!-- packages section starts  -->
 
-<section class="packages" id="packages">
+<!-- <section class="packages" id="packages">
 
-    <h1 class="heading"> About<span> us</span> </h1>
+    <h1 class="heading"> About<span> us</span> </h1> -->
 
     <!-- <div class="box-container">
 
@@ -132,11 +132,40 @@
             </div>
         </div> -->
 
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ex inventore necessitatibus quasi unde, quas, ratione sapiente nihil deleniti magni, iure natus perspiciatis. Eius officia libero suscipit, error sapiente vitae quas. Dolores cumque consequatur nostrum facere deserunt perspiciatis, fugiat tempore ut tempora. Architecto beatae consequatur eius minus illo, rerum quae quasi dicta repellat alias sit rem nesciunt. Veritatis, rem. Eveniet, praesentium cumque. Delectus, iste! Corporis totam quisquam modi tempore error, tenetur molestias voluptatibus. Quos natus praesentium ea ut rerum. Maxime at debitis pariatur impedit fugiat temporibus, culpa ipsa repudiandae non deleniti iste maiores. Explicabo magni enim, expedita consequatur quos suscipit.
+        <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ex inventore necessitatibus quasi unde, quas, ratione sapiente nihil deleniti magni, iure natus perspiciatis. Eius officia libero suscipit, error sapiente vitae quas. Dolores cumque consequatur nostrum facere deserunt perspiciatis, fugiat tempore ut tempora. Architecto beatae consequatur eius minus illo, rerum quae quasi dicta repellat alias sit rem nesciunt. Veritatis, rem. Eveniet, praesentium cumque. Delectus, iste! Corporis totam quisquam modi tempore error, tenetur molestias voluptatibus. Quos natus praesentium ea ut rerum. Maxime at debitis pariatur impedit fugiat temporibus, culpa ipsa repudiandae non deleniti iste maiores. Explicabo magni enim, expedita consequatur quos suscipit.
 
+    </div> -->
+
+</section>
+
+<section class="about" id="about">
+
+    <h1 class="heading">About <span>us</span></h1>
+
+    <div class="content">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda amet facilis voluptate quam impedit, neque doloribus voluptas velit cumque eius similique porro excepturi totam quaerat, quis quia! Distinctio facilis adipisci consequatur porro quaerat unde obcaecati molestias, cumque tempora quibusdam, debitis consectetur iste et earum recusandae repellat doloremque modi ut reprehenderit aliquam exercitationem asperiores vel odio? Laborum aliquam quidem assumenda, quo itaque mollitia ratione quisquam nihil eos error ad esse enim sunt cupiditate ipsa sequi aut dignissimos commodi, obcaecati quam. Molestiae praesentium unde deleniti asperiores neque mollitia obcaecati, error animi libero perspiciatis quaerat inventore blanditiis aperiam saepe amet. Minus sunt aperiam, nisi magnam, fugiat, non illum aliquid officia a cum cumque aspernatur itaque. Eius qui saepe sunt quisquam modi architecto asperiores, earum necessitatibus officiis tenetur voluptatibus nostrum obcaecati quae veritatis alias suscipit minus beatae nulla reiciendis nisi libero. Libero minima suscipit quo dicta veritatis autem, veniam, ratione ut adipisci itaque expedita? Quam eveniet quas illum ex necessitatibus maiores reiciendis nesciunt cum eos voluptatum voluptate odit molestias, voluptates vitae reprehenderit vero eius nulla at repellendus mollitia distinctio rem perferendis ducimus magni! Quia asperiores ex iste illo sapiente voluptas vitae aliquid fugit deleniti deserunt ratione veritatis magnam dolorum, soluta nemo, porro, iusto quibusdam?</p>
+    </div>
+
+    <div class="row">
+        <div class="image">
+            <img src="images/d1.jpg" alt="">
+        </div>
+
+        <form action="">
+            <h3>send us a message</h3>
+            <input type="text" placeholder="name" class="box">
+            <input type="email" placeholder="email" class="box">
+            <input type="number" placeholder="phone number" class="box">
+            <textarea placeholder="message" cols="30" rows="10" class="box"></textarea>
+            <a href="#" class="btn">
+                <span class="text text-1">send message</span>
+                <span class="text text-2" aria-hidden="true">send message</span>
+            </a>
+        </form>
     </div>
 
 </section>
+
 
 <!-- packages section ends -->
 
