--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <nav class="navbar">
         <a href="#home">home</a>
+        <a href="#about">about</a>
         <a href="#services">services</a>
         <a href="#review">review</a>
         <a href="#contact">contact</a>
@@ -143,14 +144,18 @@
     <h1 class="heading">About <span>us</span></h1>
 
     <div class="content">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda amet facilis voluptate quam impedit, neque doloribus voluptas velit cumque eius similique porro excepturi totam quaerat, quis quia! Distinctio facilis adipisci consequatur porro quaerat unde obcaecati molestias, cumque tempora quibusdam, debitis consectetur iste et earum recusandae repellat doloremque modi ut reprehenderit aliquam exercitationem asperiores vel odio? Laborum aliquam quidem assumenda, quo itaque mollitia ratione quisquam nihil eos error ad esse enim sunt cupiditate ipsa sequi aut dignissimos commodi, obcaecati quam. Molestiae praesentium unde deleniti asperiores neque mollitia obcaecati, error animi libero perspiciatis quaerat inventore blanditiis aperiam saepe amet. Minus sunt aperiam, nisi magnam, fugiat, non illum aliquid officia a cum cumque aspernatur itaque. Eius qui saepe sunt quisquam modi architecto asperiores, earum necessitatibus officiis tenetur voluptatibus nostrum obcaecati quae veritatis alias suscipit minus beatae nulla reiciendis nisi libero. Libero minima suscipit quo dicta veritatis autem, veniam, ratione ut adipisci itaque expedita? Quam eveniet quas illum ex necessitatibus maiores reiciendis nesciunt cum eos voluptatum voluptate odit molestias, voluptates vitae reprehenderit vero eius nulla at repellendus mollitia distinctio rem perferendis ducimus magni! Quia asperiores ex iste illo sapiente voluptas vitae aliquid fugit deleniti deserunt ratione veritatis magnam dolorum, soluta nemo, porro, iusto quibusdam?</p>
+    <p>Step into the world of <big style="color: #588524;">CITIFLO</big> , where logistics is more than a service—it's a symphony of precision and care. We're the architects behind the scenes, linking businesses with certified logistics partners to orchestrate seamless deliveries. With a blend of cutting-edge technology and human expertise, we're committed to shaping the future of efficient transport. Join us as we journey toward a new era of logistics, where every connection we create leads to excellence.</p>
     </div>
 
     <div class="row">
         <div class="image">
-            <img src="images/d1.jpg" alt="">
+            <h3 style="text-align: center;">Crafting Connections, Delivering Excellence</h3>
         </div>
-
+        <div class="image">
+            <img src="images/team.jpg" alt="" style="clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%); box-shadow: 0px 20px 3px grey;">
+        </div>
+  
+<!-- 
         <form action="">
             <h3>send us a message</h3>
             <input type="text" placeholder="name" class="box">
@@ -161,7 +166,7 @@
                 <span class="text text-1">send message</span>
                 <span class="text text-2" aria-hidden="true">send message</span>
             </a>
-        </form>
+        </form> -->
     </div>
 
 </section>
