--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <section class="home" id="home">
 
     <div class="image" data-aos="fade-down">
-        <img src="images/d1.jpg" alt="" height="820" width="100" style=" box-shadow:  0px 2px 3px rgba(134, 131, 131, 0.699);">
+        <img src="images/hero.jpg" alt="" height="820" width="100" style=" box-shadow:  0px 2px 3px rgba(134, 131, 131, 0.699);">
     </div>
 
     <div class="content" data-aos="fade-up">
@@ -186,7 +186,7 @@
             <span>01</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 15 15"><path fill="green" d="M1.5 0a1.5 1.5 0 1 0 1.415 2H4.5A2.5 2.5 0 0 1 7 4.5v6a3.5 3.5 0 0 0 3.5 3.5h1.585a1.5 1.5 0 1 0 0-1H10.5A2.5 2.5 0 0 1 8 10.5v-6A3.5 3.5 0 0 0 4.5 1H2.915A1.5 1.5 0 0 0 1.5 0Z"/></svg>
             <h3>Connect</h3>
-            <p>connect with certified logistics partners at affordable rate</p>
+            <p>connect with certified logistics partners at affordable rates</p>
         </div>
 
         <div class="box" data-aos="zoom-in">
