--- a/move.html
+++ b/move.html
@@ -365,8 +365,10 @@
         + "<br> Email: " + document.getElementById("email").value
         + "<br> Phone no: " + document.getElementById("phone").value
         + "<br> Shipping as a/an: " +document.getElementById("shipping").value
-        + "<br> from: " +document.getElementById("from").value+ "<br> to: " +document.getElementById("to").value
-        + "<br> vehicle type: " +document.getElementById("vehicle").value+ "<br> Weight: " + document.getElementById("weight").value
+        + "<br> from: " +document.getElementById("from").value 
+        + "<br> to: " +document.getElementById("to").value
+        + "<br> vehicle type: " +document.getElementById("vehicle").value 
+        + "<br> Weight: " + document.getElementById("weight").value
         + "<br> Width: " +document.getElementById("width").value
         + "<br> length/height: " +document.getElementById("height").value 
         + "<br> quantity: " +document.getElementById("quantity").value
