--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
     </div> -->
     <div class="nav">
-        <img src="./images/Black logo - no background.png" alt="" width="115"
-        height="80">
+        <a href="index.html"><img src="./images/Black logo - no background.png" alt="" width="115"
+        height="80"></a>
         <div class="jump">
-        <p>Home</p>
+        <a href="index.html"><p>Home</p></a>
         <p>About us</p>
         <p>Sign in</p>
         </div>
